mongo/base/mongo-rs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: mongo
  name: mongo
  namespace: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mongo
  template:
    metadata:
      labels:
        name: mongo
    spec:
      containers:
      - image: quay.io/mavazque/mongodb:autors2 
        name: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: /data/db
          name: mongodb-data
        - mountPath: /opt/mongo-ssl/
          name: mongodb-ssl
        - mountPath: /var/tmp/podinfo
          name: pod-info
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongo
      - name: mongodb-ssl
        secret:
          secretName: mongodb-ssl
      - name: pod-info
        downwardAPI:
          items:
          - path: "labels"
            fieldRef:
              fieldPath: metadata.labels
